# mulex-fk

./: .gitignore  404.html  CMakeLists.txt  CMakePresets.json  LibConfig.cmake.in  LibConfigVersion.cmake.in  README.md  index.html  kpm.yaml  main.cpp  mkdocs.yml  mxbackend.h  mxcapi.h  mxdrv.h  mxevt.h  mxhttp.h  mxlbk.h  mxlogger.h  mxmsg.h  mxrdb.h  mxres.h.in  mxrun.h  mxsystem.cpp  mxsystem.h  mxtypes.h  vcpkg-configuration.json  vcpkg.json
.github/workflows/: docs_ci.yml  package.yml
backends/: index.html
bck/: CMakeLists.txt  mxbackend.cpp
capi/: CMakeLists.txt  mxcapi.cpp
cmake/: BuildFrontend.cmake  BuildManifest.cmake  Configure.cmake  Findlibusb.cmake  GenerateConfigInfo.cmake  InstallDependencies.cmake  InstallMulex.cmake  InternetConnection.cmake  MingwToolchain.cmake  PackageMulex.cmake
ctargets/: CMakeLists.txt  rdbreader.cpp
ctgen/: filehex2array.py
docs/: backends.md  events.md  getting_started.md  index.md  installing.md  pdb.md  plugins.md  rdb.md  rex.md
drv/: CMakeLists.txt  mxdrv.cpp
events/: index.html
examples/: CMakeLists.txt  consumer_be.cpp
examples/prod_cons/: CMakeLists.txt  coincidence_analysis.cpp  producer_be.cpp  signal_reader.cpp  temp_producer.py  temp_reader.cpp
frontend/: .gitignore  globals.d.ts  index.html  login.html  package.json  tailwind.config.js  tsconfig.json  vite.config.login.ts  vite.config.main.ts  vite.config.ts
frontend/api/: package.json  rollup.config.js  tsconfig.json  ui.config.json  vite.config.ts
frontend/api/src/: GaugeVertical.tsx  ValuePanel.tsx  index.tsx
frontend/api/src/components/ui/: tooltip.tsx
frontend/src/: App.tsx  BackendViewer.tsx  Dashboard.tsx  Debug.tsx  EventsViewer.tsx  HistoryViewer.tsx  Home.tsx  LogBook.tsx  Project.tsx  RdbViewer.tsx  RunViewer.tsx  index.tsx  login.tsx  testp.tsx
frontend/src/api/: Button.tsx  Plot.tsx  Selector.tsx  ValueControl.tsx  index.tsx
frontend/src/components/: About.tsx  BackendStatusTable.tsx  Badges.tsx  Button.tsx  Card.tsx  ClientsTable.tsx  ComboSimple.tsx  DiGraph.tsx  DynamicRouter.tsx  DynamicTitle.tsx  FileDropUpload.tsx  GaugeVertical.tsx  HexTable.tsx  InlineGraph.tsx  LogTable.tsx  MarkdownEditor.tsx  Plot.tsx  Popup.tsx  RdbPlot.tsx  RdbTable.tsx  ResourcePanel.tsx  RouterCatcher.tsx  SearchBar.tsx  Selector.tsx  Sidebar.tsx  Status.tsx  Switch.tsx  TreeNode.tsx  ValueControl.tsx  ValuePanel.tsx
frontend/src/components/ui/: badge-label.tsx  dialog.tsx  table.tsx
frontend/src/lib/: convert.ts  globalstate.ts  metadata.ts  msg.ts  plugin.ts  plugin.tsx  rdb.ts  rdbtree.ts  rmap.ts  rpc.ts  rset.ts  usermeta.ts  utils.ts  websocket.ts
getting_started/: index.html
install/: on_install.py
installing/: index.html
lbk/: CMakeLists.txt  mxlbk.cpp
network/: CMakeLists.txt  mxevt.cpp  mxhttp.cpp  mxmsg.cpp  mxrpcgen.py  roles.json  rpc.cpp  rpc.h  rpc_macros.h  socket.cpp  socket.h  vite.config.ts
pdb/: index.html
plug/: CMakeLists.txt  fxfer.cpp  main.cpp  package.json  plug.h  plugin.tsx  vite.config.ts
plugins/: index.html
pymx/: _exceptions.py  _logger.py  _platform.py  backend.py
pymx/pymulex/: _exceptions.py  _logger.py  _platform.py
pymx/test/: backend.py
rdb/: CMakeLists.txt  index.html  mxfdb.cpp  mxpdb.cpp  mxrdb.cpp
rex/: index.html
rexs/: CMakeLists.txt  main.cpp  mxrexs.cpp  mxrexs.h
rpc/: CMakeLists.txt  mxrpcgen.py  rpc.cpp  rpc.h  socket.cpp  socket.h
run/: CMakeLists.txt  mxrun.cpp
search/: search_index.json
test/: CMakeLists.txt  argpack.cpp  argparse.cpp  backend.cpp  drv.cpp  evt.cpp  ksmatch.cpp  listen_bck.cpp  logger.cpp  rdb.cpp  rex_bck.cpp  rpc.cpp  rpc.h  rpcserver.cpp  stress.cpp  test.h
